<resources>
    <string name="app_name">UserGitHub</string>

    <string name="list_title">User GitHub DiCoding</string>
    <string name="user_photo">User Photo</string>

    <string name="content_description_user_photo">Photo Detail User</string>
    <string name="content_description_splash_screen">Splash Screen Logo</string>

    <string name="gists">Public Gists</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="content_description_add_to_favorite">Button Add To Favorite</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>

    <string name="user_github">User Github</string>
    <string name="user_favorite">User Favorite</string>
    <string name="daily_reminder">Daily Reminder at 09:00 am</string>
    <string name="key_daily" translatable="false">daily_reminder</string>

    <string name="notification_title">Daily Reminder</string>
    <string name="notification_description">Let search your favorite user github!</string>
    <string name="no_data">No data</string>

    <string name="search">Search</string>
</resources>